--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Kris's Website</title>
+  <title>Keth's Website</title>
   <link rel="stylesheet" href="css\styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images\cloud.png" alt="cloud-img">
-    <h1>I'm Kris.</h1>
+    <h1>I'm Keth.</h1>
     <h2>a computer science student</h2>
     <img class="bottom-cloud" src="images\cloud.png" alt="cloud-img">
     <img src="images\mountain.png" alt="mountain-img">
